# uzak

./: LICENSE  Pipfile  README.md  config.toml  main.py  pyproject.toml
uzak/: __init__.py  config.py  datamodel.py  db.py  download.py  log.py  main.py  parser.py
uzak/download/: base.py  direct.py  torrent.py
