[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uzak"
version = "0.1"
dependencies = [
    "bs4",
    "requests",
    "psutil",
    "tqdm",
    "platformdirs"
]
authors = [
  { name="bunburya", email="dev@bunburya.eu" },
]
description = "Track and download ZIM archives provided by Kiwix."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/bunburya/uzak"

[project.scripts]
uzak = "uzak:main"